Setup lando for easier documentation and building