@@ -24,50 +24,35 @@ The Denner Public API provides open data around the promotion of it's articles.
 
 ## Documentation and Building
 
-To see the documentation page [Swagger UI](https://swagger.io/tools/swagger-ui/) visit  http://denner-mobile-api-docs.detailnet.ch/ or 
-for development start the Docker instance that presents the static HTML pages in `/docs`  (`lando start` and then view http://denner-mobile-api-spec.detailnet.me/)
+To see the documentation page [Swagger UI](https://swagger.io/tools/swagger-ui/) visit  http://denner-api-docs.detailnet.ch/ 
+or for development, start the Docker instance (`lando start`) that presents the static HTML pages in `/docs` directory and
+load the page http://denner-public-api-spec.detailnet.me. 
 
 ### Building
 To build the specification we're using [swagger-codegen](https://github.com/swagger-api/swagger-codegen).
 
-#### Using Ubuntu on WSL2 
-
-@todo This procedure has to be fixed, the swagger-codgen should run in a dedicated Docker container, 
-      and the update of docs should be done with a simple `lando build` call on CLI. 
-
-Run the following commands to install swagger-codgen and it's dependencies in a separate directory:
+This project is already setup to build directly through `lando`.
 
 ```shell
-cd ..
-git clone git@github.com:swagger-api/swagger-codegen.git
-sudo apt-get install maven
-sudo apt install openjdk-11-jdk
-cd swagger-codegen
-git fetch origin 3.0.0:3.0.0
-git checkout 3.0.0
-#  export JDK_JAVA_OPTIONS=-Djdk.attach.allowAttachSelf=true .. not sure if really needed
-mvn clean package
-```
-
-#### JSON (used to update docs page too)
-Once installed, `openapi.json` can be generated as follows:
-
-```shell
-cd ../swagger-codegen  && \
-java -jar modules/swagger-codegen-cli/target/swagger-codegen-cli.jar generate \
-   -i ../denner-public-api-spec/src/swagger.yml \
-   -l openapi \
-   -o ../denner-public-api-spec/docs && \
-cd -
+lando start
+lando build-docs
 ```
 
 The file will be located at `docs/openapi.json`.
 
 **Important: after generation revert the servers section at beginning of `docs/openapi.json`**
 
-You can then review the changes in the local browser (`lando start` and then view http://denner-public-api-spec.detailnet.me/) and commit them.
+You can then review the changes in the [local browser](http://denner-public-api-spec.detailnet.me/) before commit.
 
-#### Compiling Stylesheets
+### Preserve AWS API changes
+
+AWS API gateway does a good job with the "Deployment History" but for a better consultation on changes and in case of disaster recovery,
+we download in this project the export as "OpenAPI 3 + API Gateway Extensions" after every deployment.
+
+The download is performed with `lando export-api`. (Can be also dane manually through the AWS console)
+
+
+### Compiling Stylesheets
 
 To compile the stylesheets for the swagger docs, globally install npm sass with `install -g sass` and run sass:
 
